boulder/boulder/tests/compile_fail/type/direct_self_ref.bo
# Recursive type `A`
# (4:

struct A {
    a: u32,
    b: A,
}